--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Website Pricing </title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="Manufacturer of Press components, Sheet metal components" name="keywords">
+  <meta content="" name="keywords">
   <meta content="" name="description">
 
   <!-- Favicons -->
